--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "engines": {     "node": "16.19.1"   },
   "name": "blog",
   "version": "1.0.0",
   "description": "",
@@ -7,9 +8,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "build:ui": "rm -rf build && cd ../part2-Notes/ && npm run build && cp -r build ../part3-Node",
+    "build": "rm -rf build && cd blog-frontend && npm run build && mv build ../",
     "deploy": "gh-pages -d build",
-    "deploy:full": "npm run build:ui && npm run deploy",
+    "deploy:full": "npm run build && npm run deploy",
     "logs:prod": "fly logs",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -26,7 +27,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.4",
-    "mongoose-unique-validator": "^3.1.0"
+    "mongoose-unique-validator": "^3.1.0",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
@@ -40,5 +42,5 @@
     "testEnvironment": "node",
     "globalTeardown": "./tests/teardown.js"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:5000"
 }
