--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "mongoose-unique-validator": "^3.1.0",
     "webpack": "^4.43.0"
   },
+"eslintConfig": {
+  "extends": "react-app"
+},
+
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.36.0",
