--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "engines": {     "node": "16.19.1"   },
+  "engines": {
+    "node": "16.19.1"
+  },
   "name": "blog",
   "version": "1.0.0",
   "description": "",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.36.0",
+    "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^5.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
@@ -43,8 +46,7 @@
     "globalTeardown": "./tests/teardown.js"
   },
   "proxy": "http://localhost:5000",
-"eslintConfig": {
-  "extends": "eslint:recommended"
-}
-
+  "eslintConfig": {
+    "extends": "eslint:recommended"
+  }
 }
