--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.36.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "gh-pages": "^5.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
